[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-excel-plugin"
version = "1.0.0"
description = "AI-powered Excel Analyst Plugin that runs comparisons, models data, and automates workbook workflows via prompts."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
